--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portifólio</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 </head>
 <body>
     <header class="header">
@@ -25,7 +26,7 @@
         <div class="home-content">
             <h3>Olá, Eu sou</h3>
             <h1>Henrique Alves</h1>
-            <h3>E eu sou um</h3>
+            <h3>E eu sou um <span class="text"></span></h3>
             <p>Desenvolvedor Front-End</p>
             <div class="home-sci">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -33,8 +34,9 @@
                 <a href="#"><i class='bx bxl-whatsapp' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <a href="#" class="btn-box">Mais Sobe /Mim</a>
+            <a href="#" class="btn-box">Mais Sobe Mim</a>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
