--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <a href="#" class="logo">Portifolio</a>
 
         <nav class="navbar">
-            <a href="#">Ìnicio</a>
-            <a href="#">Sobre</a>
-            <a href="#">Habilidades</a>
-            <a href="#">Portifólio</a>
-            <a href="#">Contato</a>
+            <a href="#" style="--i:1"class="active">Ìnicio</a>
+            <a href="#" style="--i:2">Sobre</a>
+            <a href="#" style="--i:3">Habilidades</a>
+            <a href="#" style="--i:4">Portifólio</a>
+            <a href="#" style="--i:5">Contato</a>
 
         </nav>
 
@@ -29,10 +29,10 @@
             <h3>E eu sou um <span class="text"></span></h3>
             <p>Desenvolvedor Front-End</p>
             <div class="home-sci">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-whatsapp' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="#" style="--i:7"><i class='bx bxl-facebook'></i></a>
+                <a href="#" style="--i:8"><i class='bx bxl-instagram' ></i></a>
+                <a href="#" style="--i:9"><i class='bx bxl-whatsapp' ></i></a>
+                <a href="#" style="--i:10"><i class='bx bxl-linkedin' ></i></a>
             </div>
             <a href="#" class="btn-box">Mais Sobe Mim</a>
         </div>
