--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#" style="--i:1"class="active">Ìnicio</a>
             <a href="#" style="--i:2">Sobre</a>
             <a href="#" style="--i:3">Habilidades</a>
-            <a href="#" style="--i:4">Portifólio</a>
+            <a href="portifolio.html" style="--i:4">Portifólio</a>
             <a href="#" style="--i:5">Contato</a>
 
         </nav>
