--- a/chale hotel/index.html
+++ b/chale hotel/index.html
@@ -23,6 +23,16 @@
                         <a class="reserva" href="">Reserva</a>
                         <div style="clear: both;"></div>
                     </div>
+                    <div id="menu">
+                        <ul id="navegaçao">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Historia</a></li>
+                            <li><a href="">Imprensa</a></li>
+                            <li><a href="">Gastronomia</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                        <img class="depoimento" src="imagens/depoimento.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
