--- a/chale hotel/chalehotel.html
+++ b/chale hotel/chalehotel.html
@@ -36,6 +36,22 @@
                 </div>
             </div>
         </div>
+        <div id="area-principal">
+            <div class="conteudo">
+                <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero vitae eius, accusantium molestiae ducimus quos adipisci illum nemo nesciunt. Ea distinctio ullam minima officiis impedit suscipit commodi porro corporis fugit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, laboriosam provident repellendus facilis voluptate enim minus aliquid perferendis nihil ipsam blanditiis rerum esse maiores perspiciatis soluta, odit officia saepe voluptatibus.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam est vero vitae quaerat esse perferendis non quod optio. Labore animi sequi eum qui asperiores aperiam reiciendis repellat laudantium cumque. Voluptatibus.</p>
+            </div>
+        </div>
+        <div id="area-lateral">
+            <div class="conteudo">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque maiores placeat molestiae atque deserunt, nesciunt dolores praesentium aperiam earum, ratione sunt ab asperiores saepe ipsam, suscipit voluptate facere eaque officiis.</p>
+            </div>
+        </div>
+        <div id="rodape">
+            rodape
+        </div>
     </div>
 </body>
 </html>
